# news-tracker

./: .dockerignore  .gitignore  api.py  database.py  dockerfile  logger.yaml  model.py  news.py  pyproject.toml
backend/: _resend.py  api.py  database.py  logger.py  logger.yaml  model.py  news.py  prompt.txt  pyproject.toml
tests/: conftest.py  test_api.py  test_database.py  test_logger.py  test_model.py  test_news.py  test_subscriber.py
