[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.16.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
]
