[project]
name = "news-tracker"
version = "0.1.1"
description = "Tracks important news and updates that affects the indonesian stock market"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.16.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "resend>=2.30.1",
    "sqlalchemy>=2.0.50",
]
